[tool.black]
line-length = 120

[tool.isort]
line_length = 120
length_sort = true
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = 3.11
strict = true
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = "socketio.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=jeopardy --cov-report html --cov-report xml"
testpaths = [ "tests" ]
markers = [ "incremental", "browser" ]

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.poetry]
name = "jeopardy"
version = "0.10.0"
description = "A multiplayer clone of Jeopardy!"
authors = ["Brendan Cazier <520246+cazier@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "jeopardy", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
click = "^8.1.6"
eventlet = "^0.33.3"
flask-sqlalchemy = "^3.0.5"
jinja2 = "^3.1.2"
flask-socketio = "^5.3.5"

[tool.poetry.group.testing.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
requests = "^2.31.0"
faker = "^19.2.0"
playwright = "^1.36.0"

[tool.poetry.group.linters.dependencies]
black = "^23.7.0"
mypy = "^1.5.0"
ruff = "^0.0.284"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
yamlfix = "^1.14.0"
ipython = "^8.14.0"
rich = "^13.5.2"
ipdb = "^0.13.13"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
