[tool.black]
line-length = 120

[tool.isort]
line_length = 120
length_sort = true
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = 3.12
strict = true
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = "socketio.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=jeopardy --cov-report html --cov-report xml"
testpaths = [ "tests" ]
markers = [ "incremental", "browser" ]

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.poetry]
name = "jeopardy"
version = "0.10.0"
description = "A multiplayer clone of Jeopardy!"
authors = ["Brendan Cazier <520246+cazier@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "jeopardy", from = "." }]

[tool.poetry.dependencies]
python = "~3.12"
Flask = "^3.0.0"
click = "^8.1.7"
eventlet = "^0.36.1"
flask-sqlalchemy = "^3.1.1"
jinja2 = "^3.1.3"
flask-socketio = "^5.3.6"

[tool.poetry.group.testing.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
requests = "^2.31.0"
faker = "^24.8.0"
playwright = "^1.43.0"

[tool.poetry.group.linters.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
ruff = "^0.3.5"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
yamlfix = "^1.16.0"
ipython = "^8.23.0"
rich = "^13.7.1"
ipdb = "^0.13.13"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
